namespace ParrotSlots.Observer;

public interface IGameObserver
{
    void OnGameEvent(GameEvent gameEvent);
}
